# agentsrc-py

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  git_commit.ps1  pyproject.toml  ruff.json  social_kit.md  test_coverage.txt  test_results.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_idea.md
.github/workflows/: ci.yml
src/agentsrc/: __init__.py  cli.py  config.py  models.py  resolver.py
src/agentsrc/analysis/: ast_symbols.py  public_api.py  summary.py
src/agentsrc/analysis/plugins/: __init__.py  pydantic.py
src/agentsrc/commands/: init.py  inject.py  inspect.py  query.py  sync.py
src/agentsrc/fetch/: artifacts.py  cache.py  unpack.py
src/agentsrc/providers/: pypi.py
src/agentsrc/query/: server.py
src/agentsrc/storage/: writer.py
tests/: __init__.py  test_analysis.py  test_ast.py  test_cli.py  test_commands.py  test_fetch.py  test_holistic.py  test_public_api.py  test_pypi.py  test_resolver.py  test_summary.py  test_writer.py
