[project]
name = "agentsrc"
version = "0.1.0"
description = "Fetch exact Python dependency source & extract AST-level semantic signals for AI coding agents."
readme = "README.md"
license = "MIT"
authors = [
    { name = "NikitasT2003", email = "tsoumasnikitas@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "ai-agents",
    "ast",
    "coding-assistant",
    "developer-tools",
    "llm",
    "pypi",
    "python",
    "semantic-analysis",
    "source-code",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "responses>=0.26.0",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/NikitasT2003/agentsrc-py"
Repository = "https://github.com/NikitasT2003/agentsrc-py"
Issues = "https://github.com/NikitasT2003/agentsrc-py/issues"
Changelog = "https://github.com/NikitasT2003/agentsrc-py/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
norecursedirs = [".*", "build", "dist"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[project.scripts]
agentsrc = "agentsrc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
